--- a/PF.css
+++ b/PF.css
@@ -133,6 +133,7 @@ nav ul li a:hover {
     font-size: 1.1em;
 }
 .about-image {
+    margin: 0 auto;
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -140,6 +141,7 @@ nav ul li a:hover {
     border: 3px solid #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 .about-image img {
     width: 100%;
     height: 100%;
